update gitignore, ignore compiled utilities and css

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,15 @@
 
 # testing
 /coverage
+/test/unit/utilities
 
 # production
 /build
+
+#compiled
+/src/index.css
+/src/index.min.css
+
 
 # misc
 .DS_Store
