--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "private": true,
   "dependencies": {
     "node-uuid": "^1.4.8",
+    "normalizr": "^3.2.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "react-scroll": "^1.7.7",
     "redux-mastermind": "^4.2.1",
-    "semantic-ui-react": "^0.77.2"
+    "reselect": "^3.0.1",
+    "semantic-ui-react": "^0.77.2",
+    "socket.io-client": "^2.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
