--- a/src/styles/src/theme.config
+++ b/src/styles/src/theme.config
@@ -26,7 +26,7 @@
 @site       : 'default';
 
 /* Elements */
-/*@button     : 'default';*/
+@button     : 'default';
 /*@container  : 'default';*/
 /*@divider    : 'default';*/
 /*@flag       : 'default';*/
